--- a/sass/main.scss
+++ b/sass/main.scss
@@ -91,27 +91,31 @@ body {
   }
 
   #home {
-    .square {
-      position: absolute;
-      background-color: #f9f9f9;
-      border-radius: 5rem;
-      height: 20rem;
-      width: 20rem;
-      top: -26%;
-      left: 84%;
-      transform: rotate(-17deg);
-      overflow-x: hidden;
-    }
-    .square-2 {
-      position: absolute;
-      background-color: #f5f5ff;
-      border-radius: 5rem;
-      height: 20rem;
-      width: 20rem;
-      top: -13%;
-      left: 81%;
-      transform: rotate(-17deg);
-      overflow-x: hidden;
+    .sq-cont {
+      position: relative;
+      overflow-x: hidden !important;
+      .square {
+        position: absolute;
+        background-color: #f9f9f9;
+        border-radius: 5rem;
+        height: 20rem;
+        width: 20rem;
+        top: -26%;
+        left: 84%;
+        transform: rotate(-17deg);
+        overflow-x: hidden;
+      }
+      .square-2 {
+        position: absolute;
+        background-color: #f5f5ff;
+        border-radius: 5rem;
+        height: 20rem;
+        width: 20rem;
+        top: -13%;
+        left: 81%;
+        transform: rotate(-17deg);
+        overflow-x: hidden;
+      }
     }
     .bg {
       width: 100%;
@@ -255,11 +259,7 @@ body {
           }
           &:hover .card-top {
             color: #fff;
-            background-image: linear-gradient(
-              to right,
-              $pink,
-              $very-light-pink
-            );
+            background-image: linear-gradient(to right, $pink, $very-light-pink);
             transition: all 0.5s;
           }
           &:hover .card-body {
@@ -274,13 +274,7 @@ body {
     .line-vr {
       margin: 5px 0;
       height: 2px !important;
-      background: repeating-linear-gradient(
-        to right,
-        #eee 0,
-        #eee 5px,
-        transparent 5px,
-        transparent 7px
-      );
+      background: repeating-linear-gradient(to right, #eee 0, #eee 5px, transparent 5px, transparent 7px);
       width: 6.3rem;
       transform: rotate(90deg);
       position: absolute;
@@ -291,13 +285,7 @@ body {
     .line-hr {
       margin: 5px 0;
       height: 2px !important;
-      background: repeating-linear-gradient(
-        to right,
-        #eee 0,
-        #eee 5px,
-        transparent 5px,
-        transparent 7px
-      );
+      background: repeating-linear-gradient(to right, #eee 0, #eee 5px, transparent 5px, transparent 7px);
       width: 10.3rem;
       position: absolute;
       top: 69%;
@@ -307,13 +295,7 @@ body {
     .line-vl {
       margin: 5px 0;
       height: 2px !important;
-      background: repeating-linear-gradient(
-        to right,
-        #eee 0,
-        #eee 5px,
-        transparent 5px,
-        transparent 7px
-      );
+      background: repeating-linear-gradient(to right, #eee 0, #eee 5px, transparent 5px, transparent 7px);
       width: 6.3rem;
       transform: rotate(90deg);
       position: absolute;
@@ -324,13 +306,7 @@ body {
     .line-hl {
       margin: 5px 0;
       height: 2px !important;
-      background: repeating-linear-gradient(
-        to right,
-        #eee 0,
-        #eee 5px,
-        transparent 5px,
-        transparent 7px
-      );
+      background: repeating-linear-gradient(to right, #eee 0, #eee 5px, transparent 5px, transparent 7px);
       width: 9.65rem;
       position: absolute;
       top: 69%;
@@ -377,12 +353,7 @@ body {
         }
       }
       a.btn {
-        background-image: linear-gradient(
-          to right,
-          $pink,
-          $light-pink,
-          $very-light-pink
-        );
+        background-image: linear-gradient(to right, $pink, $light-pink, $very-light-pink);
         color: white;
         border-radius: 24rem;
       }
@@ -448,12 +419,7 @@ body {
       }
       &:hover .card-top {
         color: #fff;
-        background-image: linear-gradient(
-          to right,
-          $pink,
-          $light-pink,
-          $very-light-pink
-        );
+        background-image: linear-gradient(to right, $pink, $light-pink, $very-light-pink);
         transition: all 0.5s;
       }
     }
@@ -525,22 +491,12 @@ body {
         left: 0;
         right: 0;
         bottom: 30%;
-        background-image: linear-gradient(
-          to right,
-          $pink,
-          $light-pink,
-          $very-light-pink
-        );
+        background-image: linear-gradient(to right, $pink, $light-pink, $very-light-pink);
         opacity: 0;
       }
       &:hover .info {
         color: #fff !important;
-        background-image: linear-gradient(
-          to right,
-          $pink,
-          $light-pink,
-          $very-light-pink
-        );
+        background-image: linear-gradient(to right, $pink, $light-pink, $very-light-pink);
         transition: all 0.5s;
       }
       &:hover {
@@ -568,12 +524,7 @@ body {
       }
     }
     a.btn {
-      background-image: linear-gradient(
-        to right,
-        $pink,
-        $light-pink,
-        $very-light-pink
-      );
+      background-image: linear-gradient(to right, $pink, $light-pink, $very-light-pink);
       color: #fff;
       border-radius: 24rem;
       font-size: 0.9rem;
@@ -671,11 +622,7 @@ body {
           padding-left: 1.5rem;
           padding-right: 1.5rem;
           &:hover {
-            background-image: linear-gradient(
-              to right,
-              $pink,
-              $very-light-pink
-            );
+            background-image: linear-gradient(to right, $pink, $very-light-pink);
             transition: all 0.5s;
             & .tiny {
               color: white;
@@ -686,11 +633,7 @@ body {
             border-right: 1px solid #eee;
             padding: 0 0.8rem 0 0;
             width: 1.9rem !important;
-            background-image: linear-gradient(
-              to right,
-              $pink,
-              $very-light-pink
-            );
+            background-image: linear-gradient(to right, $pink, $very-light-pink);
 
             -webkit-background-clip: text;
             color: transparent;
@@ -724,11 +667,7 @@ body {
             font-size: 0.9rem;
           }
           i {
-            background-image: linear-gradient(
-              to right,
-              $pink,
-              $very-light-pink
-            );
+            background-image: linear-gradient(to right, $pink, $very-light-pink);
 
             -webkit-background-clip: text;
             color: transparent;
@@ -750,11 +689,7 @@ body {
           a {
             border: 1px solid red;
             border-radius: 24rem;
-            background-image: linear-gradient(
-              to right,
-              $pink,
-              $very-light-pink
-            );
+            background-image: linear-gradient(to right, $pink, $very-light-pink);
             color: white;
           }
         }
@@ -825,11 +760,7 @@ body {
             color: #757575;
             &:hover {
               color: white;
-              background-image: linear-gradient(
-                to right,
-                $pink,
-                $very-light-pink
-              );
+              background-image: linear-gradient(to right, $pink, $very-light-pink);
               transition: all 0.5s ease-in-out;
             }
           }
@@ -1115,14 +1046,16 @@ div[slider] > input[type="range"]::-ms-tooltip {
     overflow-x: hidden !important;
   }
   #home {
-    background-image: linear-gradient(
-        to right,
-        rgba($light-pink, 0.2),
-        rgba($light-pink, 0.2)
-      ),
+    background-image: linear-gradient(to right, rgba($light-pink, 0.2), rgba($light-pink, 0.2)),
       url("../images/sakura.jpg");
     background-size: cover;
+    position: relative !important;
     background-repeat: no-repeat;
+    .square,
+    .square-2 {
+      display: inline-block !important;
+      overflow-x: hidden !important;
+    }
 
     .overlay {
       top: 0;
